--- a/css/main.css
+++ b/css/main.css
@@ -5,23 +5,15 @@
     list-style: none;
     box-sizing: border-box;
     /*-webkit-user-select: none;*/
+    font-size: 16px;
     font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Microsoft Yahei";
 }
 
-body {
-    overflow: hidden;
-    opacity: 0;
-}
-
 .innerC {
-    /*display: none;*/
-    position: fixed;
     border: 1px solid #000;
     width: 1024px;
-    height: 100%;
+    min-height: 100vh;
     margin: 0 auto;
-    left: 50%;
-    transform: translateX(-50%);
 }
 
 /*右面的圆*/
