--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@
 }
 
 .innerC {
-    border: 1px solid #000;
+    /*border: 1px solid #000;*/
     width: 1024px;
     min-height: 100vh;
     margin: 0 auto;
